# feature-implementer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: index.html  test.txt
data/css/: main.css
data/js/: main.js
docs/: cli.md  development.md  templates.md  usage.md
feature_implementer/: Dockerfile  README.md  config.py  requirements.txt  run.py
feature_implementer/src/: app.py  cli.py  file_utils.py  prompt_generator.py
feature_implementer/static/css/: style.css
feature_implementer/static/js/: file_explorer.js  form_handler.js  preset_handler.js  theme_toggle.js  ui_utils.js
feature_implementer/templates/: base.html  index.html  result.html
src/feature_implementer_core/: app.py  cli.py  config.py  prompt_generator.py
