[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-implementer"
version = "0.1.0"
authors = [
  { name="Paul Wenner", email="paul.wenner@crateflow.ai" },
]
description = "A tool to help implement features based on context."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "llm",
  "feature",
  "prompt",
  "implementation",
  "ai",
  "context",
  "cli",
  "web",
  "flask",
  "template",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=2.0", 
    "Jinja2>=3.1",
    "Werkzeug>=2.3",
    "MarkupSafe>=2.1",
    "itsdangerous>=2.1",
    "click>=8.1",
    "gunicorn>=21.2",
    "tiktoken>=0.5",
    # Add other dependencies
]

[project.urls]
"Homepage" = "https://github.com/paulwenner/feature-implementer"

[project.scripts]
feature-implementer = "feature_implementer_core.cli:run_web_app"
feature-implementer-cli = "feature_implementer_core.cli:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"feature_implementer_core" = ["py.typed", "templates/**", "static/**", "feature_implementation_template.md"] 